# trash_robot_sim

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: gazebo.launch.py  rviz.launch.py
models/robot/: only_robot.sdf
rviz/: robot.rviz
scripts/: detector.py  map_builder.py  map_check.py  navigator.py  train_yolo.py
tests/: test_navigator.py
urdf/: trash_robot.urdf.xacro
worlds/: trash_world.sdf
